0.x (upcoming release)
- (feature)        a request that failed to download a file, can be retried
- (infrastructure) Migrate to Spring Boot 2

0.4.2
- (feature)        users can add multiple instances of a series into a collection
- (infrastructure) all integration tests now pass on PostgreSQL
- (infrastructure) migrate unit tests from Hamcrest to AssertJ

0.4.1
- (feature) add possibility for search series by catalog number in user's collection (contributed by Mukesh Katariya)
- (ci)      cancel code coverage publishing to codecov.io service

0.4
- (infrastructure) switched to Java8
- (user interface) ported to Bootstrap 3
- (infrastructure) ported to Spring Boot
- (functionality)  implemented possibility to user to add additional images to series
- (functionality)  allow to different series to have the same catalog numbers
- (functionality)  add possibility for search series by catalog number (contributed by Sergey Chechenev)
- (functionality)  add interface for viewing suspicious activity (contributed by Sergey Chechenev)
- (functionality)  allow to users to add categories and countries
- (infrastructure) ported to Spring's JdbcTemplate (get rid of Spring-Data-JPA and Hibernate)
- (functionality)  send daily reports to admin by e-mail
- (infrastructure) use logback (instead of log4j) for logging
- (functionality)  add possibility for adding series sales
- (functionality)  add interface for viewing series sales (contributed by Sergey Chechenev)
- (functionality)  name of category/country in Russian now are optional fields
- (functionality)  preview now is generated after uploading an image
- (functionality)  add interface for adding buyers and sellers
- (functionality)  add capability to specify image URL (as alternative to providing a file)
- (functionality)  admin can import a series from an external site
- (integration)    migrate from coveralls.io to codecov.io service for code coverage
- (functionality)  add support for specifying Solovyov catalog numbers