@@ -465,6 +465,7 @@
 														<option value="GBP">GBP</option>
 														<option value="RUB">RUB</option>
 														<option value="CZK">CZK</option>
+														<option value="BYN">BYN</option>
 													</select>
 												</td>
 												<td width="40%"></td>
