@@ -420,6 +420,7 @@
 												<option value="EUR">EUR</option>
 												<option value="RUB">RUB</option>
 												<option value="CZK">CZK</option>
+												<option value="BYN">BYN</option>
 											</select>
 										</p>
 										<!--/*/
@@ -648,6 +649,7 @@
 															<option value="GBP">GBP</option>
 															<option value="RUB" selected="selected">RUB</option>
 															<option value="CZK">CZK</option>
+															<option value="BYN">BYN</option>
 														</select>
 													</div>
 												</div>
@@ -675,6 +677,7 @@
 															<option value="GBP">GBP</option>
 															<option value="RUB">RUB</option>
 															<option value="CZK">CZK</option>
+															<option value="BYN">BYN</option>
 														</select>
 													</div>
 												</div>
