@@ -30,7 +30,7 @@ Series without price should be shown but not taken into account
 
 *** Keywords ***
 Before Test Suite
-	@{currencies}=                      Create List  USD  EUR  RUB  CZK
+	@{currencies}=                      Create List  USD  EUR  RUB  CZK  BYN
 	${randomCurrency}=                  Evaluate  random.choice(${currencies})  modules=random
 	Set Suite Variable                  ${expectedCurrency}  ${randomCurrency}
 	Open Browser                        ${SITE_URL}/account/auth  ${BROWSER}
